<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/dk_parent_panel" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    android:background="@drawable/dk_bg_dialog_1"
    android:orientation="vertical" >
    <!-- title -->
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
		<Button 
		    android:id="@+id/btnClose"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@drawable/btn_close_selector"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
		    android:layout_marginRight="10dp"
		    />
		<TextView 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:singleLine="true" 
		    android:gravity="center"
		    android:text="@string/dk_txt_game_download_title"
		    android:layout_centerInParent="true"
		    android:textSize="20sp"
		    android:textColor="@android:color/black"
		    android:layout_centerVertical="true"
		    /> 
    </RelativeLayout>
	<LinearLayout 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="12dp"
	    android:layout_marginRight="12dp"
	    android:orientation="horizontal">
		<TextView 
		    android:layout_width="0px"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:text="@string/dk_txt_game_name"
		    android:textColor="@android:color/black"
		    android:textSize="16sp"
		    android:gravity="center"
		    />
		<EditText 
		    android:id="@+id/txtGameName"
		    android:layout_width="0px"
		    android:layout_weight="2"
		    android:layout_height="wrap_content"
		    android:textColor="@android:color/black"
		    android:textSize="16sp"
		    android:singleLine="true"
		    android:editable="false"
		    android:paddingLeft="5dp"
		    android:background="@drawable/dk_edit_bg"
		    android:gravity="center_vertical"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="12dp"
	    android:layout_marginRight="12dp"
	    android:orientation="horizontal">
		<TextView 
		    android:layout_width="0px"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:text="@string/dk_txt_game_path"
		    android:textColor="@android:color/black"
		    android:textSize="16sp"
		    android:gravity="center"
		    />
		<EditText 
		    android:id="@+id/txtGamePath"
		    android:layout_width="0px"
		    android:layout_weight="2"
		    android:layout_height="wrap_content"
		    android:textColor="@android:color/black"
		    android:textSize="16sp"
		    android:singleLine="true"
		    android:ellipsize="none"
			android:editable="false"
			android:inputType="none"
		    android:paddingLeft="5dp"
		    android:background="@drawable/dk_edit_bg"
		    android:gravity="center_vertical"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="12dp"
	    android:layout_marginRight="12dp"
	    android:orientation="horizontal">
		<TextView 
		    android:layout_width="0px"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:text="@string/dk_txt_game_size"
		    android:textColor="@android:color/black"
		    android:textSize="16sp"
		    android:gravity="center"
		    />
		<TextView 
		    android:id="@+id/txtGameSize"
		    android:layout_width="0px"
		    android:layout_weight="2"
		    android:layout_height="wrap_content"
		    android:textColor="@android:color/black"
		    android:textSize="16sp"
		    android:paddingLeft="5dp"
		    android:singleLine="true"
		    android:gravity="center_vertical"/>"
	</LinearLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
	    android:gravity="center">
	    <Button 
		    android:id="@+id/btnStartDownload"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/dk_txt_start_download"
		    android:textColor="@android:color/black"
			android:textSize="16sp"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:background="@drawable/dk_btn_pointer_game_selector"/>
	</LinearLayout>
</LinearLayout>
